Finalized campers data into table and loading message during initial get

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
 .btn {
   margin: 5px;
 }
+
+.top-header {
+  padding-top: 30px;
+  padding-bottom: 10px;
+
+}
+
+.loading {
+  margin-top: 50px;
+}
